# AnkiAPI

./: README.md  __init__.py  pyproject.toml  setup.py
ankiapi/: __init__.py  anki_api.py
src/: anki_api.py
test/: test_package.py
